--- a/public/styles.css
+++ b/public/styles.css
@@ -32,9 +32,24 @@ img {
   border: 1px solid black;
 } 
 
+/* CSS Animation */
+.beaker {
+	width: 100px;
+  height: 100px;
+  text-align: center;
+  animation-name: beaker;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+@keyframes beaker {
+  from  {background-color:rgb(73, 73, 73); width: auto ; height: 30px; margin-top: 10px;}
+  to {background-color: rgb(206, 205, 205); width: auto ; height: 2px; margin-top: 10px;}
+}
 
 a:link {
-  color:inherit;
+  color:black;
   text-decoration: underline;
 }
 
@@ -53,7 +68,7 @@ a:link {
 
 @media (prefers-color-scheme: dark) {
   body{
-    background-color: black;
+    background-color: rgb(53, 53, 53);
     color: lightgrey;
   }
 
@@ -63,6 +78,10 @@ a:link {
   }
   img:hover {
     opacity: 1;
+  }
+
+  a:link{
+    color: lightgray;
   }
 
 }
