--- a/public/styles.css
+++ b/public/styles.css
@@ -48,12 +48,12 @@ img {
   to {background-color: rgb(206, 205, 205); width: auto ; height: 2px; margin-top: 10px;}
 }
 
-a:link {
+a{
   color:black;
   text-decoration: underline;
 }
 
-.plinks a{
+.plinks a {
   line-height: 1.8;
 }
 
@@ -80,7 +80,7 @@ a:link {
     opacity: 1;
   }
 
-  a:link{
+  a{
     color: lightgray;
   }
 
